[package]
name = "websocket_test_server"
version = "0.1.0"
authors = ["Naoki Fujita <fujitanaoki0718@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.8"
futures-util = "0.3.8"
bytes = "1.0.0"
actix = "0.10.0"
actix-codec = "0.3.0"
actix-web = "3.3.2" 
actix-web-actors = "3.0.0" 
awc = "2.0.3" 
eyre = "0.6.3"
chrono = "0.4.19"

[[bin]]
name = "client"
path = "src/client.rs"


[[bin]]
name = "server"
path = "src/server.rs"